# system-design-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/fundamentals/: INDEX.md  distributed-systems-fundamentals.md  monolith-limitations.md  system-design-principles.md
docs/phase10-advanced-topics/: INDEX.md  advanced-topics.md
docs/phase2-architecture-patterns/: INDEX.md  architectural-patterns.md  event-driven-architecture.md  microservices-architecture.md
docs/phase3-scalability-performance/: INDEX.md  scalability-performance.md
docs/phase4-data-management/: INDEX.md  data-management.md
docs/phase5-reliability-resilience/: INDEX.md  reliability-resilience.md
docs/phase6-observability-monitoring/: INDEX.md  observability-monitoring.md
docs/phase7-security-identity/: INDEX.md  security-identity.md
docs/phase8-deployment-devops/: INDEX.md  deployment-devops.md
docs/phase9-real-world-systems/: INDEX.md  real-world-systems.md
docs/session-notes/: CURRENT_STATE.md  FRONTEND_READY.md  GIT_SETUP.md  PROGRESS.md  README.md  RUNNING.md  SESSION_SUMMARY.md  TESTING_THE_PAIN.md
ecommerce-microservices/: .env.example  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  ENV_SETUP.md  README.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  docker-compose.yml  microservices.code-workspace
ecommerce-microservices/api-gateway/: Dockerfile  pyproject.toml
ecommerce-microservices/api-gateway/app/: main.py
ecommerce-microservices/docs/: DAEMON_EXPLAINED.md  DATA_PERSISTENCE_DEMO.md  INDEX.md  MESSAGE_BROKER_FUNDAMENTALS.md  PAYMENT_GATEWAY_REAL_WORLD.md  QUEUE_SYSTEMS_COMPARISON.md  SERVICE_COMMUNICATION.md  SOLACE_VS_RABBITMQ.md
ecommerce-microservices/frontend/: MIGRATION_PROGRESS.md  package-lock.json  package.json  vite.config.ts
ecommerce-microservices/frontend/src/: App.css  App.tsx  index.css
ecommerce-microservices/frontend/src/components/: CartItem.css  CartItem.tsx  ErrorBoundary.tsx  ProductCard.css  ProductCard.tsx
ecommerce-microservices/frontend/src/hooks/: useOrderStatusPolling.ts
ecommerce-microservices/scripts/: setup.sh
ecommerce-microservices/services/cart-service/: Dockerfile  pyproject.toml
ecommerce-microservices/services/cart-service/app/: database.py  main.py  models.py  schemas.py
ecommerce-microservices/services/email-service/: Dockerfile  pyproject.toml
ecommerce-microservices/services/email-service/app/: config.py  email_sender.py  event_consumer.py  main.py
ecommerce-microservices/services/order-service/: Dockerfile  pyproject.toml
ecommerce-microservices/services/order-service/app/: config.py  database.py  event_publisher.py  main.py  models.py
ecommerce-microservices/services/payment-service/: pyproject.toml
ecommerce-microservices/services/product-service/: .env.example  Dockerfile  README.md  pyproject.toml
ecommerce-microservices/services/user-service/: Dockerfile  pyproject.toml
ecommerce-microservices/services/user-service/app/: database.py  main.py  models.py  schemas.py
ecommerce-microservices/shared/: events.py
ecommerce-microservices/shared/events/: order_events.py
ecommerce-microservices/shared/utils/: logger.py
ecommerce-monolith/: ARCHITECTURE.md  README.md  docker-compose.yml
ecommerce-monolith/backend/: .env.example  README.md  pyproject.toml  requirements.txt
ecommerce-monolith/backend/app/: config.py  database.py  main.py
ecommerce-monolith/backend/app/models/: __init__.py  cart.py  order.py  product.py  review.py  user.py
ecommerce-monolith/backend/app/routers/: auth.py  cart.py  orders.py  products.py
ecommerce-monolith/backend/app/schemas/: __init__.py  cart.py  order.py  product.py  review.py  user.py
ecommerce-monolith/backend/app/services/: email_service.py  order_service.py  payment_service.py
ecommerce-monolith/backend/app/utils/: auth.py
ecommerce-monolith/frontend/: 2025-12-20-id-like-you-to-take-me-on-a-journey-to-learn-syst.txt  index.html  package-lock.json  package.json
ecommerce-monolith/frontend/src/: App.css  App.jsx
(+31 files in other folders)
