[tool.poetry]
name = "email-service"
version = "0.1.0"
description = "Email Service - Microservices E-commerce"
authors = ["System Design Learning"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
pika = "^1.3.2"  # RabbitMQ client
aiosmtplib = "^3.0.0"  # Async SMTP client

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
